[update] iniファイル読み込みの仕様変更
・iniファイル形式を利用しているconfig.iniとroutes.iniについて、パースの方式を以下のように変更
・ConfigLoader::parseConfigFile内で使用しているparse_ini_fileのscanner_modeをINI_SCANNER_NORMALからINI_SCANNER_TYPEDに変更
・RouteLoader::getRouter内で使用しているparse_ini_fileのscanner_modeをINI_SCANNER_RAWからINI_SCANNER_TYPEDに変更
・これに従いconfig.ini, routes.iniを微修正

--- a/application/app/configs/config.ini
+++ b/application/app/configs/config.ini
@@ -4,7 +4,7 @@
 EXECUTION_ENVIRONMENT = 'development'
 
 ; config.iniの各パラメータを定数に展開するかどうか
-EXPAND_CONFIGS_TO_CONSTANTS = 'off'
+EXPAND_CONFIGS_TO_CONSTANTS = off
 
 [SECURITY]
 ; /psf/lib/Securityクラスで使用するハッシュアルゴリズム
