[update] Viewクラスの仕様変更
・Viewクラスの設計(各種メソッド・メンバ)の見直し
・layoutファイルに関する設定項目をconfig.iniに追加
・viewファイル内で他のviewファイルを取り込むためのView::includeViewを作成

--- a/application/app/configs/config.ini
+++ b/application/app/configs/config.ini
@@ -21,3 +21,14 @@ FIXED_SALT_FOR_PASSWORD = '01666ec060466c14b9fa06c613fbac449163f2a2017558fe16526
 ; パスワードハッシュ化の際のストレッチング回数
 ; アプリケーションのパフォーマンス(サーバ負荷)に合わせて調整してください
 STRETCH_NUM = 1000
+
+[LAYOUT]
+; layoutファイルの置かれるディレクトリ名
+; このディレクトリはviewsディレクトリの直下に配置されている必要がある
+LAYOUTS_DIR = 'layouts'
+
+; layoutファイルの指定をしなかった場合にデフォルトのlayoutファイルを使用するかどうか
+USE_DEFAULT_LAYOUT = on
+
+; 上記のUSE_DEFAULT_LAYOUTが'on'の場合に使用するデフォルトのlayoutファイル名
+DEFAULT_LAYOUT_FILENAME = 'layout'
